--- a/awsstripe-main/myapp/templates/myapp/home.html
+++ b/awsstripe-main/myapp/templates/myapp/home.html
@@ -10,6 +10,8 @@
 
 {% endif %}
 
+<link rel="stylesheet" type="text/css" href="../../css/home.css">
+
 <!-- ユ：{{ sample }}<br> -->
 
 <!-- {% for list in sample %}
