--- a/awsstripe-main/myapp/templates/myapp/home.html
+++ b/awsstripe-main/myapp/templates/myapp/home.html
@@ -1,81 +1,33 @@
-{% if user.is_authenticated %}
-<h1>googleID:{{ user.username }}</h1>
-<h1>ユーザ名:{{ user.last_name }} {{ user.first_name }}さんがログイン中です</h1>
-<h1>メールアドレス:{{ user.email }}</h1>
-<a href="{% url 'logout' %}">ログアウト</a><br>
-{% else %}
-<h1>メインメニュー</h1>
-<p>google認証にてログイン</p>
-<a href="{% url 'login' %}">ログインする</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="../../css/home.css">
 
-{% endif %}
+  <title>メインメニュー</title>
+</head>
+<body>
+ 
+  <div class="main-outer">
+    
+    <div class="top-call-button-outer">
 
-<link rel="stylesheet" type="text/css" href="../../css/home.css">
+    </div>
 
-<!-- ユ：{{ sample }}<br> -->
+    <div class="middle-hobby-button-outer">
 
-<!-- {% for list in sample %}
-<tr>
-    <td>{{ list }}</td>
-    <td><a href="skype:{{ list }}?call">Call{{ list }}</a></td>
-</tr>
-{% endfor %} -->
+    </div>
 
+    <div class="bottom-weather-button-outer">
 
+    </div>
 
-<!-- <h1>googleログイン</h1>
-ユーザ名：{{ user.first_name }} , {{ user.last_name }}<br>
-<a href="{% url 'social:begin' 'google-oauth2' %}">Googleでログイン</a><br>
-<a class="lead" href="{% url 'logout' %}">Log out</a> -->
+  </div>
+  
 
-<!-- <h1>Skype</h1>
-<a href="skype:echo123?call">Call the Skype Echo / Sound Test Service</a>
-<br>
-<p>ビデオ</p>
-<a href="skype:echo123?call&amp;video=true">Call the Skype Echo / Sound Test Service</a>
-<br>
-<p>uenotomoki</p>
-<a href="skype:live:.cid.f7ef235c9ea21c9f?call">Call the Skype uenotomoki of yazakiPC</a>
-<br>
-<p>ビデオ</p>
-<a href="skype:live:.cid.f7ef235c9ea21c9f?call&amp;video=true">Call the Skype uenotomoki of yazakiPC</a>
+</body>
+</html>
 
-
-<br>
-If your call specifies multiple participants, the individual identities—Skype Names or phone numbers—must be separated with semicolons; for example:
-participant1;participant2;participant3
-<br>
-Example: Conference, no topic
-skype:skype.test.user.1;skype.test.user.2;skype.test.user.3?call
-<br>
-Example: Conference, setting the topic
-skype:skype.test.user.1;skype.test.user.2;+16505550123?call&amp;topic=Geek%20Conspiracy
-<br>
-<br>
-<br>
-<h1>Line</h1>
-<a href="https://line.me/R/calls">line画面</a> -->
-
-<br>
-{% if  subscription_id != 123 %}
-<div>
-    {% for list in sample %}
-    <tr>
-        <td>{{ list }}</td>
-        <td><a href="skype:{{ list.user_skype_id.skype_id }}?call">{{ list.first_name }} {{ list.last_name }}に電話する</a></td>
-    </tr>
-    {% endfor %}
-    <br>
-    <br>
-    <br>
-  <form action="{% url 'stop_subscription_session' %}" method="POST">
-    <!-- <input type="hidden" name="subscriptionId" value="{{ subscription_id }}" /> -->
-    <input name="subscriptionId" value="{{ subscription_id }}" />
-    <!-- <input name="orderName" value="{{ order_name }}" /> -->
-    <button class="btn btn-outline-info btn-lg" type="submit">定期利用をキャンセルする</button>
-  </form>
-</div>
-{% else %}
-<a href="{% url 'product-top-page' %}">サブスクリプション登録する</a>
-{% endif %} 
 
