--- a/awsstripe-main/myapp/templates/myapp/home.html
+++ b/awsstripe-main/myapp/templates/myapp/home.html
@@ -13,7 +13,9 @@
   <div class="main-outer">
     
     <div class="top-call-button-outer">
-
+      <div class="top-call-button-inner">
+        <h1>insert coin</h1>
+      </div>
     </div>
 
     <div class="middle-hobby-button-outer">
