--- a/awsstripe-main/myapp/css/home.css
+++ b/awsstripe-main/myapp/css/home.css
@@ -23,6 +23,23 @@
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
 
+.top-call-button-inner{
+    position: relative;
+    width: 1600px;
+    height: 100px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+}
+
+.top-call-button-inner h1{
+    background: yellow;
+    border-radius: 10px;
+    font-size: 5em;
+    align-items: center;
+    justify-content: center;
+}
+
+
 .middle-hobby-button-outer{
     position: relative;
     width: 1600px;
