--- a/awsstripe-main/myapp/templates/myapp/home.html
+++ b/awsstripe-main/myapp/templates/myapp/home.html
@@ -12,9 +12,28 @@
  
   <div class="main-outer">
     
-    <div class="top-call-button-outer">
+    <div class="top-weather-time-outer">
+      
+      <div class="top-left-weather-outer">
+
+      </div>
+      
+      <div class="top-right-time-outer">
+        
+      </div>
 
     </div>
+
+
+
+
+
+
+
+
+
+
+    
 
     <div class="middle-hobby-button-outer">
       
