--- a/awsstripe-main/myapp/templates/myapp/home.html
+++ b/awsstripe-main/myapp/templates/myapp/home.html
@@ -15,6 +15,20 @@
     <div class="top-weather-time-outer">
       
       <div class="top-left-weather-outer">
+        <!-- Weather Widget -->
+        <div class="widget">
+          <div class="left">
+            <img src="../../weather_icons/animated/cloudy-day-1.svg" class="icon">
+            <h5 class="weather-status">Partly Cloud</h5>
+          </div>
+          
+          <div class="right">
+            <h5 class="city">Sapporo</h5>
+            <h5 class="degree">-30</h5>
+          </div>
+
+
+        </div>
 
       </div>
       
