--- a/awsstripe-main/myapp/templates/myapp/home.html
+++ b/awsstripe-main/myapp/templates/myapp/home.html
@@ -19,12 +19,12 @@
         <div class="widget">
           <div class="left">
             <img src="../../weather_icons/animated/cloudy-day-1.svg" class="icon">
-            <h5 class="weather-status">Partly Cloud</h5>
+            <h5 class="weather-status">晴れのち曇り</h5>
           </div>
-          
+
           <div class="right">
-            <h5 class="city">Sapporo</h5>
-            <h5 class="degree">-30</h5>
+            <h5 class="city">下田</h5>
+            <h5 class="degree">-30&#176;C</h5>
           </div>
 
 
