--- a/awsstripe-main/myapp/css/home.css
+++ b/awsstripe-main/myapp/css/home.css
@@ -1,13 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;700&display=swap');
+
 *{
     left: 0;
     top: 0;
     background: #111;
+    font-family: 'Noto Sans JP', sans-serif;
 }
 
 .main-outer{
     position: fixed;
     width: 810px;
-    height: 1000px;
+    height: 1010px;
     background: #242424;
 }
 
@@ -36,7 +39,7 @@
 
 .top-left-weather-outer *{
     background: rgba(35, 35, 35, 0.75);
-
+    border-radius: 5px;
 }
 
 .widget{
@@ -46,8 +49,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 400px;
-    height: 140px;
-    border-radius: 5px;
+    height: 140px;   
 }
 
 .widget .left{
@@ -82,7 +84,7 @@
 .widget .right .city{
     font-size: 1.5em;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 15px;
     text-shadow: 1px 1px 5px #707070;
 }
 
@@ -135,7 +137,7 @@
 .bottom-weather-button-outer{
     position: relative;
     width: 800px;
-    height: 340px;
+    height: 350px;
     background: #353535;
     background: green;
     margin: auto;
