--- a/awsstripe-main/myapp/templates/myapp/home.html
+++ b/awsstripe-main/myapp/templates/myapp/home.html
@@ -27,14 +27,18 @@
             <h5 class="city">愛媛</h5>
             <h5 class="degree">-30&#176;C</h5>
           </div>
-
-
         </div>
 
       </div>
       
       <div class="top-right-time-outer">
         <div class="top">
+          <div class="date">
+            <span id="dayname">Day</span>
+            <span id="month">Month</span>
+            <span id="daynum">00</span>
+          </div>
+
 
         </div>
         
