--- a/awsstripe-main/myapp/css/home.css
+++ b/awsstripe-main/myapp/css/home.css
@@ -113,15 +113,28 @@
     position: relative;
     width: 400px;
     height: 40px;
-    background: yellow;
     border-radius: 5px 5px 0 0;
+}
+
+.top-right-time-outer .top .date{
+    position: relative;
+    width: 400px;
+    height: 40px;
+    color: #fff;
+    text-align: center;
+    justify-content: center;
+    background: none;
+    transform: translate(0, 30%);
+}
+
+.top-right-time-outer .top .date span{
+    background: none;
 }
 
 .top-right-time-outer .bottom{
     position: relative;
     width: 400px;
     height: 100px;
-    /* background: pink; */
     margin-top: 0;
     border-radius: 0 0 5px 5px;
 }
@@ -136,23 +149,11 @@
     font-weight: 700;
     width: 300px;
     height: 90px;
-    transform: translate(0, -40%);
+    transform: translate(0, -35%);
     background: none;
     
     
 }
-
-/* .top-right-time-outer .time{
-    color: #fff;
-    text-align: center;
-    margin: auto;
-    font-size: 5.5em;
-    font-weight: 700;
-    width: 400px;
-    height: 90px;
-    
-} */
-
 
 
 
