--- a/awsstripe-main/myapp/templates/myapp/home.html
+++ b/awsstripe-main/myapp/templates/myapp/home.html
@@ -70,17 +70,20 @@
           <!-- <input type="hidden" name="subscriptionId" value="{{ subscription_id }}" /> -->
           <input name="subscriptionId" value="{{ subscription_id }}" />
           <!-- <input name="orderName" value="{{ order_name }}" /> -->
-          <button class="btn btn-outline-info btn-lg" type="submit">定期利用をキャンセルする</button>
+          <button class="btn btn-outline-info btn-lg" type="submit">利用キャンセル</button>
         </form>
       </div>
-      
-      
-
+      <div class="subscription-form">
+          <div class="subscription-text">
+            <span class="django">{% else %}</span>
+            <a href="{% url 'product-top-page' %}">利用登録</a>
+            <span class="django">{% endif %} </span>
+          </div>
+      </div>
     </div>
 
   </div>
   
-
 </body>
 </html>
 
