--- a/awsstripe-main/myapp/templates/myapp/home.html
+++ b/awsstripe-main/myapp/templates/myapp/home.html
@@ -24,7 +24,7 @@
           </div>
 
           <div class="right">
-            <h5 class="city">愛媛</h5>
+            <h5 class="city">稚内</h5>
             <h5 class="degree">-30&#176;C</h5>
           </div>
         </div>
