--- a/awsstripe-main/myapp/templates/myapp/home.html
+++ b/awsstripe-main/myapp/templates/myapp/home.html
@@ -64,6 +64,10 @@
       
     </div>
 
+    <div class="bottom-userinfo-loginout-outer">
+      
+    </div>
+
     <div class="bottom-cancel-subscription-outer">
       <div class="cancel-form">
         <form action="{% url 'stop_subscription_session' %}" method="POST">
