--- a/awsstripe-main/myapp/css/home.css
+++ b/awsstripe-main/myapp/css/home.css
@@ -167,7 +167,7 @@
 .middle-hobby-button-outer{
     position: relative;
     width: 800px;
-    height: 520px;
+    height: 575px;
     background: #353535;
     background: rgb(205, 110, 91);
     margin: auto;
@@ -178,15 +178,81 @@
 
 .bottom-userinfo-loginout-outer{
     position: relative;
+    display: flex;
     width: 800px;
-    height: 240px;
+    height: 200px;
     background: #353535;
-    background: rgb(205, 110, 91);
     margin: auto;
     margin-top: 5px;
     border-radius: 5px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
+
+
+.bottom-userinfo-loginout-outer .left-profile{
+    position: relative;
+    width: 180px;
+    height: 180px;
+    margin: auto;
+    background: #999999;
+    border-radius: 100%;
+    overflow: hidden;
+}
+
+.bottom-userinfo-loginout-outer .left-profile img{
+    width: 180px;
+    height: 180px;
+    margin: auto;
+    background: #353535;
+}
+
+
+.bottom-userinfo-loginout-outer .right-top-userinfo{
+    position: relative;
+    margin-left: 5px;
+    width: 595px;
+    height: 140px;
+    background: #353535;
+    background: red;
+    border-radius: 5px;
+}
+
+.bottom-userinfo-loginout-outer .right-top-userinfo span{
+    display: none;
+}
+
+.bottom-userinfo-loginout-outer .right-top-userinfo p{
+    color: #fff;
+    background: red;
+}
+
+
+.bottom-userinfo-loginout-outer .right-top-userinfo .top-last-first-name{
+    font-size: 1.25em;
+    font-weight: 700;
+}
+
+.bottom-userinfo-loginout-outer .right-top-userinfo .middle-user-name,
+.bottom-userinfo-loginout-outer .right-top-userinfo .bottom-user-email{
+    color: #555555;
+    font-size: 0.75em;
+    font-weight: 300;
+}
+
+
+
+
+.bottom-userinfo-loginout-outer .right-bottom-loginout{
+    position: fixed;
+    margin-top: 870px;
+    margin-left: 210px;
+    width: 595px;
+    height: 60px;
+    background: #353535;
+    background: blue;
+    border-radius: 5px;
+}
+
 
 
 
