--- a/awsstripe-main/myapp/templates/myapp/home.html
+++ b/awsstripe-main/myapp/templates/myapp/home.html
@@ -50,16 +50,59 @@
     </div>
     
     <div class="middle-hobby-button-outer">
+      <!-- ユ：{{ sample }}<br> -->
+
+      <!-- {% for list in sample %}
+      <tr>
+          <td>{{ list }}</td>
+          <td><a href="skype:{{ list }}?call">Call{{ list }}</a></td>
+      </tr>
+      {% endfor %} -->
+
+
+
+      <!-- <h1>googleログイン</h1>
+      ユーザ名：{{ user.first_name }} , {{ user.last_name }}<br>
+      <a href="{% url 'social:begin' 'google-oauth2' %}">Googleでログイン</a><br>
+      <a class="lead" href="{% url 'logout' %}">Log out</a> -->
+
+      <!-- <h1>Skype</h1>
+      <a href="skype:echo123?call">Call the Skype Echo / Sound Test Service</a>
+      <br>
+      <p>ビデオ</p>
+      <a href="skype:echo123?call&amp;video=true">Call the Skype Echo / Sound Test Service</a>
+      <br>
+      <p>uenotomoki</p>
+      <a href="skype:live:.cid.f7ef235c9ea21c9f?call">Call the Skype uenotomoki of yazakiPC</a>
+      <br>
+      <p>ビデオ</p>
+      <a href="skype:live:.cid.f7ef235c9ea21c9f?call&amp;video=true">Call the Skype uenotomoki of yazakiPC</a>
+
+
+      <br>
+      If your call specifies multiple participants, the individual identities—Skype Names or phone numbers—must be separated with semicolons; for example:
+      participant1;participant2;participant3
+      <br>
+      Example: Conference, no topic
+      skype:skype.test.user.1;skype.test.user.2;skype.test.user.3?call
+      <br>
+      Example: Conference, setting the topic
+      skype:skype.test.user.1;skype.test.user.2;+16505550123?call&amp;topic=Geek%20Conspiracy
+      <br>
+      <br>
+      <br>
+      <h1>Line</h1>
+      <a href="https://line.me/R/calls">line画面</a> -->
       
 
 
 
-      
+
     </div>
 
     <div class="bottom-userinfo-loginout-outer">
       <div class="left-profile">
-        <img src="../../../images/user_profile.png" alt="">
+        <img src="../../../images/user_profile_1.jpg" alt="">
       </div>
       <div class="right-top-userinfo">
         
